# parse_directory_contents

./: Cargo.toml  README.md
src/: main.rs
