[package]
name = "files_to_llm"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A CLI to parse your directory files contents to clipboard or an output file in order to simplify the work with LLMs"
homepage = "https://github.com/DobbiKov/parse_directory_contents"
repository = "https://github.com/DobbiKov/parse_directory_contents"
readme = "README.md"
authors = ["DobbiKov <dobbikov@gmail.com>"]


[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
clippers = "0.1.2"
ignore = "0.4.23"
